# domeneshop_cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: client.rs  constants.rs  domain_lookup.rs  main.rs
src/commands/: dns.rs  domain.rs  dyndns.rs  forwards.rs  invoices.rs
