[package]
name = "domeneshop_cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
public-ip = "0.2.2"
tokio = { version = "1.40.0", features = ["macros"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.128"
serde = {version = "1.0.210", features = ["derive"]}
chrono = "0.4.38"
domeneshop_client = { git = "https://github.com/Arthyon/domeneshop_client.git", rev = "1441350b218d826d8ebe947f5305b1cee99c4acb" }
simple-log = "2.1.0"
